More build fixes