@@ -1,7 +1,7 @@
 import org.gradle.nativeplatform.platform.internal.DefaultNativePlatform
 
 plugins {
-    id 'org.beryx.jlink' version '3.0.1'
+    id 'org.beryx.jlink' version '3.1.1'
     id 'org.jreleaser' version '1.8.0'
     id 'org.gradlex.extra-java-module-info' version '1.13' apply false
 }
@@ -31,16 +31,13 @@ if (!file("${projectDir}/pdxu.properties").exists()) {
 version = file('version').text
 def canonicalVersion = file('canonical_version').text
 
-def jvmRunArgs = [
-        "-Dfile.encoding=UTF-8",
-        // This option completely breaks the module integration if set to true.
-        // We have to explicitly disable it as it is true by default
-        '-Dpolyglotimpl.DisableClassPathIsolation=false']
+def jvmRunArgs = ["-Dfile.encoding=UTF-8"]
 
 // Disable JDK24 warnings
 jvmRunArgs += [
         "--enable-native-access=com.sun.jna",
         "--enable-native-access=javafx.graphics",
+        "--enable-native-access=org.graalvm.truffle",
         "--sun-misc-unsafe-memory-access=allow",
 ]
 
@@ -123,6 +120,10 @@ jlink {
                 'org.slf4j.simple',
                 'jdk.crypto.ec',
                 'org.kordamp.ikonli.materialdesign',
+                'com.fasterxml.jackson.module.paramnames',
+                'org.graalvm.jniutils',
+                'org.graalvm.truffle.compiler',
+                'org.graalvm.truffle.runtime',
                 'jdk.zipfs',
                 'io.github.ititus.ddsiio',
                 'jdk.accessibility',
@@ -131,6 +132,7 @@ jlink {
     }
 
     jpackage {
+        enableCds()
         appVersion = canonicalVersion
         imageOutputDir = file("$buildDir/dist")
         imageName = 'Pdx-Unlimiter'
